name:                iot-rf-tdma
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/iot-rf-tdma#readme
license:             BSD3
license-file:        LICENSE
author:              Mariusz Ryndzionek
maintainer:          mryndzionek@gmail.com
copyright:           2019 Mariusz Ryndzionek
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable iot-rf-tdma
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-missing-signatures
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, stm, stm-delay, time,
                       monad-loops, random, safe, mtl
